<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eximbank</string>
    <string name="app_name_txs">TxS SecurID\nSample</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

	<!-- main screen -->
	<string name="tokenListPrompt">Select a token</string>
	<string name="noTokenInstalled">No token installed</string>
	<string name="secsRemaining">%d sec remaining</string>
	<string name="importTokenMenuText">Import Token</string>
	<string name="deleteTokenMenuText">Delete Token</string>
	<string name="renameTokenMenuText">Rename Token</string>
	<string name="importTokenMenuTextCondensed">Import</string>
	<string name="deleteTokenMenuTextCondensed">Delete</string>
	<string name="renameTokenMenuTextCondensed">Rename</string>
	<string name="aboutMenuText">About</string>
	<string name="defaultCode">--------</string>
	<string name="token">Select a token: </string>

	<!-- main screen (TxS) -->

	<string name="otpLabel1">Current OTP:</string>
	<string name="otpLabel2">Next OTP:</string>
	<string name="generateOTP">Generate OTP</string>
	<string name="stopTimer">Stop Timer</string>
	<string name="PIN">PIN:</string>
	<string name="signDataLabel">Data:</string>
	<string name="sigSignatureLabel">Signature:</string>
	<string name="TDPLabel">TDP:</string>
	<string name="generateSign">Generate\nSignature</string>
	<string name="lastSignatureDate">Last\nSignature\nDate</string>
	<string name="showRem">Signatures\nLeft</string>
	<string name="showRaw">Show\n Raw Data</string>
	<string name="OTP">OTP</string>
	<string name="SIGN">RAW\nDATA</string>
	<string name="TDP">TDP</string>
	<string name="NA">N/A</string>
	<string name="chooseAppMenuText">Choose App</string>
	<string name="loadSampleTDP">Load Sample TDP for SN 132599496</string>
	<string name="transactionFile">This is a Transaction\n Signing Token</string>


	<!-- about screen -->
	<string name="sdkName">RSA SecurID SDK %s</string>
	<string name="sampleApp">Sample Project</string>
	<string name="deviceID">Device ID: %s</string>
	<string name="copyright">Copyright © 2013-2016 EMC Corporation.\n All Rights Reserved.</string>
	<string name="unavailable">Unavailable</string>
	<string name="close">Close</string>


	<!--  select app dialog -->
	<string name="selectAppDialogTitle">Select the App Version</string>

	<!-- rename dialog -->
	<string name="renameDialogTitle">Rename Token</string>
	<string name="renameDialogMessage">Token name:</string>

	<!-- enter pin dialog -->
	<string name="enterPinDialogTitle">Enter PIN</string>
	<string name="enterPinDialogMessage">Enter a PIN with 4&#8211;8 digits</string>


	<!-- import screen -->
	<string name="ctf">CTF</string>
	<string name="ctkip">CT-KIP</string>
	<string name="file">File</string>
	<string name="ctfLabel">CTF:</string>
	<string name="ctfHint">ctf string (required)</string>
	<string name="passwordLabel">Password:</string>
	<string name="ctfPasswrodHint">password for CTF (optional)</string>
	<string name="ctkipURL">CT-KIP URL:</string>
	<string name="ctkipURLHint">URL for CT-KIP (required)</string>
	<string name="ctkipActivationCode">Activation Code:</string>
	<string name="ctkipActivationCodeHint">activation code for CT-KIP (required)</string>
	<string name="allowUntrustedCert">Allow untrusted server cert</string>
	<string name="fileLabel">SDTID file:</string>
	<string name="fileHint">SDTID file path (required)</string>
	<string name="filePasswordHint">password for SDTID file (optional)</string>
	<string name="importButtonText">Import</string>
	<string name="qrScanButtonText">QR Scan</string>
	<string name="waitDialogTitle">Please wait</string>
	<string name="waitDialogMessage">Importing token..</string>

	<!-- Errors -->
	<string name="databasefullexception">Database is full. Maximum number of tokens can be imported is 10.</string>
	<string name="databaseexception">Token database operation failed.</string>
	<string name="deviceidinaccessibleexception">Failed to retrieve device information.</string>
	<string name="duplicatetokenexception">Duplicate token.</string>
	<string name="expiredtokenexception">Token is expired.</string>
	<string name="invaliddevicebindingexception">Token is not intended for this device.</string>
	<string name="tokennotfoundexception">Token is not found.</string>
	<string name="tokenimportexception">Token import failed.</string>
	<string name="general">Error. An exception is thrown.</string>


	<string-array name="language_arrays">
		<item>VN</item>
		<item>EN</item>
		<item>CN</item>
		<item>JP</item>
	</string-array>

	<string-array name="bank_arrays">
		<item>Ngân hàng</item>
		<item>Eximbank</item>
		<item>Vietcombank</item>
		<item>TP Bank</item>
		<item>VP Bank</item>
	</string-array>

	<string-array name="city_arrays">
		<item>Tỉnh / Thành phố</item>
		<item>Hồ Chí Minh</item>
		<item>Hà Nội</item>
		<item>Đà Nẵng</item>
		<item>Huế</item>
	</string-array>

	<string-array name="agency_arrays">
		<item>Chi nhánh</item>
		<item>Quận 1</item>
		<item>Quận 2</item>
		<item>Quận 3</item>
		<item>Quận 4</item>
	</string-array>

	<string-array name="account_arrays">
		<item>Số tài khoản</item>
		<item>1029392029</item>
		<item>1059393823</item>
		<item>1039388483</item>
		<item>1083829392</item>
	</string-array>
</resources>